--- a/index.html
+++ b/index.html
@@ -1,25 +1,80 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags unless you know what you are doing -->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Druaght Exchange</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags unless you know what you are doing -->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
+  <!-- Do not add `link` tags unless you know what you are doing -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
-    </body>
+  <!-- Do not add `script` tags unless you know what you are doing -->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body class="container-fluid">
+  <nav class="navbar navbar-default navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <!-- <span class="sr-only">Toggle navigation</span> -->
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <p class="navbar-brand">Draught Exchange</p>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+
+  <form id="sign-up" class='col-xs-8 col-xs-offset-2'>
+    <fieldset>
+      <legend>Sign up!</legend>
+      <input type='text' name='credentials[email]' id='sign-up-email' placeholder='Email'>
+      <input type='password' name='credentials[password]' id='sign-up-password' placeholder='Password'>
+      <input type='password' name='credentials[password_confirmation]' id='sign-up-password-confirmation' placeholder='Confirm Password'>
+      <input type="submit" name="submit" value="Sign up!" class='btn btn-primary'><br/>
+      <span>or</span><a id='sign-in-link'> Sign in</a>
+    </fieldset>
+  </form>
+
+  <form id="sign-in" class='col-xs-8 col-xs-offset-2'>
+    <fieldset>
+      <legend>Sign in!</legend>
+      <input type='text' name='credentials[email]' id='sign-in-email' placeholder='Email'>
+      <input type='password' name='credentials[password]' id='sign-in-password' placeholder='Password'>
+      <input type="submit" name="submit" value="Sign in!" class='btn btn-default'>
+    </fieldset>
+  </form>
+
+  <form id="sign-out">
+    <fieldset>
+      <legend>Sign Out!</legend>
+      <input type="submit" name="submit" value="Sign Out!">
+    </fieldset>
+  </form>
+
+  <form id="change-password">
+    <fieldset>
+      <legend>Change Password!</legend>
+      <input type="password" name='passwords[old]' id='old-password' placeholder="Old Password">
+      <input type="password" name='passwords[new]' id='new-password' placeholder="New Password">
+      <input type="submit" name="submit" value="Change Password!">
+    </fieldset>
+  </form>
+
+</body>
+
 </html>
