--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" id='drpdwn-button' data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <!-- <span class="sr-only">Toggle navigation</span> -->
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -28,10 +28,10 @@
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link</a></li>
+          <li class='drop-links' id='change-password-link'><a>Change Password<span class="sr-only">(current)</span></a></li>
+          <li class="active drop-links" id="sign-out"><a>Signout</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -39,7 +39,7 @@
     <!-- /.container-fluid -->
   </nav>
 
-  <form id="sign-up" class='col-xs-8 col-xs-offset-2'>
+  <form id="sign-up" class='col-xs-8 col-xs-offset-2 forms'>
     <fieldset>
       <legend>Sign up!</legend>
       <input type='text' name='credentials[email]' id='sign-up-email' placeholder='Email'>
@@ -50,7 +50,7 @@
     </fieldset>
   </form>
 
-  <form id="sign-in" class='col-xs-8 col-xs-offset-2'>
+  <form id="sign-in" class='col-xs-8 col-xs-offset-2 forms'>
     <fieldset>
       <legend>Sign in!</legend>
       <input type='text' name='credentials[email]' id='sign-in-email' placeholder='Email'>
@@ -59,14 +59,14 @@
     </fieldset>
   </form>
 
-  <form id="sign-out">
+  <!-- <form id="sign-out">
     <fieldset>
       <legend>Sign Out!</legend>
       <input type="submit" name="submit" value="Sign Out!">
     </fieldset>
-  </form>
+  </form> -->
 
-  <form id="change-password">
+  <form id="change-password" class='col-xs-8 col-xs-offset-2 forms'>
     <fieldset>
       <legend>Change Password!</legend>
       <input type="password" name='passwords[old]' id='old-password' placeholder="Old Password">
