--- a/index.html
+++ b/index.html
@@ -55,16 +55,10 @@
       <legend>Sign in!</legend>
       <input type='text' name='credentials[email]' id='sign-in-email' placeholder='Email'>
       <input type='password' name='credentials[password]' id='sign-in-password' placeholder='Password'>
-      <input type="submit" name="submit" value="Sign in!" class='btn btn-default'>
+      <input type="submit" name="submit" value="Sign in!" class='btn btn-default'><br/>
+      <span>or</span><a id='sign-up-link'> Sign up</a>
     </fieldset>
   </form>
-
-  <!-- <form id="sign-out">
-    <fieldset>
-      <legend>Sign Out!</legend>
-      <input type="submit" name="submit" value="Sign Out!">
-    </fieldset>
-  </form> -->
 
   <form id="change-password" class='col-xs-8 col-xs-offset-2 forms'>
     <fieldset>
@@ -74,6 +68,42 @@
       <input type="submit" name="submit" value="Change Password!">
     </fieldset>
   </form>
+
+  <div class='container-fluid' id='manage-market-page'>
+    <div class='row' id='welcome-container'>
+      <div class='col-xs-10 col-xs-offset-1' id='welcome-message'>
+        <h2>Welcome</h2>
+        <p>Get started by adding beers that you have on tap to the beer
+        list and hit the start button to open the market.</p>
+      </div>
+    </div>
+    <div class='row' id='beer-list'>
+      <h1>Beer List</h1>
+      <div class='container-fluid beers-container'>
+
+      </div>
+    </div>
+    <div class='row' id='whats-on-tap'>
+      <div class='col-xs-10 col-xs-offset-1'>
+        <h1 id='tap-header'>What's on Tap?</h1>
+        <form>
+          <fieldset>
+            <input type="text" name='beers[name]' id='beer-name' placeholder="Beer name">
+            <input type="text" name='beers[price]' id='price' placeholder="Price"><br />
+            <input type="submit" name="submit" value="Add Beer" class='btn btn-success'>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <div class='row' id='mrkt-action-buttons'>
+      <div id='start'>
+        <span>Start</span>
+      </div>
+      <div id='end'>
+        <span>End</span>
+      </div>
+    </div>
+  </div>
 
 </body>
 
