Adds the get ajax call on signin to get beers
created the beers folder in the scripts to handle all the beers actions
this builds out the api call to get all the beers for the current user
that is logged in. next i have to populate the beer list container with
the response that comes back with handle bars.

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
       </div>
     </div>
     <div class='row' id='mrkt-action-buttons'>
-      <div id='start'>
-        <span>Start</span>
+      <div class='col-xs-3 col-xs-offset-4' id='start'>
+        <p>Open the Market</p>
       </div>
-      <div id='end'>
-        <span>End</span>
+      <div class='col-xs-4 col-xs-offset-4' id='end'>
+        <p>Close the Market</p>
       </div>
     </div>
   </div>
