This builds out the handlebars to show the beers in the beer list container
called the handlebars template when the get request for the list of beers
has been completed and it is now filling in the beer list container
with the logged in users beers.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <div class='container-fluid' id='manage-market-page'>
     <div class='row' id='welcome-container'>
-      <div class='col-xs-10 col-xs-offset-1' id='welcome-message'>
+      <div class='col-xs-10 col-xs-offset-1 gutterless' id='welcome-message'>
         <h2>Welcome</h2>
         <p>Get started by adding beers that you have on tap to the beer
         list and hit the start button to open the market.</p>
@@ -96,10 +96,10 @@
       </div>
     </div>
     <div class='row' id='mrkt-action-buttons'>
-      <div class='col-xs-3 col-xs-offset-4' id='start'>
+      <div class='col-xs-3 col-xs-offset-4 gutterless' id='start'>
         <p>Open the Market</p>
       </div>
-      <div class='col-xs-4 col-xs-offset-4' id='end'>
+      <div class='col-xs-4 col-xs-offset-4 gutterless' id='end'>
         <p>Close the Market</p>
       </div>
     </div>
