Adds the create functionality
added the click handler for the add beer form to take the information
from the form and send a post request to add the beer to the db and then
update the beer list view with the new beer.

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class='row' id='whats-on-tap'>
       <div class='col-xs-10 col-xs-offset-1'>
         <h1 id='tap-header'>What's on Tap?</h1>
-        <form>
+        <form id='add-beer'>
           <fieldset>
-            <input type="text" name='beers[name]' id='beer-name' placeholder="Beer name">
-            <input type="text" name='beers[price]' id='price' placeholder="Price"><br />
+            <input type="text" name='beer[name]' id='beer-name' placeholder="Beer name">
+            <input type="text" name='beer[price]' id='price' placeholder="Price"><br />
             <input type="submit" name="submit" value="Add Beer" class='btn btn-success'>
           </fieldset>
         </form>
