--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
     <!-- /.container-fluid -->
   </nav>
 
+  <div class="alert alert-success" id='susuccess' role="alert">
+    <strong>Booya! Sign up successful.</strong> Go ahead and sign in to start choosing songs.
+  </div>
+  <div class="alert alert-danger" id='suerror' role="alert">
+    <strong>Oh snap!</strong> Try again, make sure your passwords are matching.
+  </div>
+  <div class="alert alert-danger" id='sierror' role="alert">
+    <strong>Hmmmm</strong> Try again, email and password do not match.
+  </div>
+  <div class="alert alert-success alert-dismissible" id='cpsuccess' role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong>Sounds good!</strong> We have changed your password for you.
+  </div>
+  <div class="alert alert-danger alert-dismissible" id='cperror' role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong>What the....</strong> Change password failed. Try again.
+  </div>
+
   <form id="sign-up" class='col-xs-8 col-xs-offset-2 forms'>
     <fieldset>
       <legend>Sign up!</legend>
@@ -55,7 +73,7 @@
       <legend>Sign in!</legend>
       <input type='text' name='credentials[email]' id='sign-in-email' placeholder='Email'>
       <input type='password' name='credentials[password]' id='sign-in-password' placeholder='Password'>
-      <input type="submit" name="submit" value="Sign in!" class='btn btn-default'><br/>
+      <input type="submit" name="submit" value="Sign in!" class='btn btn-primary'><br/>
       <span>or</span><a id='sign-up-link'> Sign up</a>
     </fieldset>
   </form>
@@ -73,14 +91,7 @@
     <div class='row' id='welcome-container'>
       <div class='col-xs-10 col-xs-offset-1 gutterless' id='welcome-message'>
         <h2>Welcome</h2>
-        <p>Get started by adding beers that you have on tap to the beer
-        list and hit the start button to open the market.</p>
-      </div>
-    </div>
-    <div class='row' id='beer-list'>
-      <h1>Beer List</h1>
-      <div class='container-fluid beers-container'>
-
+        <p>Get started by adding beers that you have on tap to the beer list and hit the start button to open the market.</p>
       </div>
     </div>
     <div class='row' id='whats-on-tap'>
@@ -93,6 +104,12 @@
             <input type="submit" name="submit" value="Add Beer" class='btn btn-success'>
           </fieldset>
         </form>
+      </div>
+    </div>
+    <div class='row' id='beer-list'>
+      <h1>Beer List</h1>
+      <div class='container-fluid beers-container'>
+
       </div>
     </div>
     <div class='row' id='mrkt-action-buttons'>
