Adds a ton of styling to the page to make it look better.
also fixes the issue where there were errors in the console if there were
no beers in the beer list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- Do not add `link` tags unless you know what you are doing -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 
   <!-- Do not add `script` tags unless you know what you are doing -->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
@@ -105,8 +106,8 @@
         <h2 id='tap-header'>What's on Tap?</h2>
         <form id='add-beer'>
           <fieldset class='form-group'>
-            <input type="text" name='beer[name]' id='beer-name' placeholder="Beer name" class='form-control'>
-            <input type="text" name='beer[price]' id='price' placeholder="Price" class='form-control'>
+            <input type="text" name='beer[name]' id='beer-name' placeholder="Beer name" class='form-control well'>
+            <input type="text" name='beer[price]' id='price' placeholder="Price" class='form-control well'>
             <input type="submit" name="submit" value="Add Beer" class='btn btn-info'>
           </fieldset>
         </form>
