Adds animation to the login screen and the home screen

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class='row' id='welcome-container'>
       <div class='col-xs-10 col-xs-offset-1 gutterless' id='welcome-message'>
         <h2>Welcome</h2>
-        <p class='info-headers'>Get started by adding beers that you have on tap to the beer list and hit the start button to open the market.</p>
+        <p class='info-headers'>Get started by adding beers that you have on tap to the beer list and hit the button to open the market.</p>
       </div>
     </div>
     <div class='row' id='whats-on-tap'>
