--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class='row' id='welcome-container'>
       <div class='col-xs-10 col-xs-offset-1 gutterless' id='welcome-message'>
         <h2>Welcome</h2>
-        <p class='info-headers'>Get started by adding beers that you have on tap to the beer list and hit the button to open the market.</p>
+        <p class='info-headers'>Get started by adding beers that you have on tap to the beer list then hit the button to open the market.</p>
       </div>
     </div>
     <div class='row' id='whats-on-tap'>
@@ -133,7 +133,7 @@
     <div class='row'>
       <h1>Draught Market</h1>
       <p id='market-info' class='info-headers'>
-        When a customer buys a beer just click it's purchase button and wait for
+        The market is now open! When a customer buys a beer just click it's purchase button and wait for
         the screen to update to watch the prices rise and fall with demand.
       </p>
       <div class='container-fluid beers-container' id='market-container'>
